# strawberry_django_playground

./: README.md  db.sqlite3  manage.py  pyproject.toml
books/: models.py  resolvers.py  schema.py  types.py
books/migrations/: 0001_initial.py
strawberry_django_playground/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
